Major Changes to Auth-server, PMBackend, and client